--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -165,6 +165,7 @@
     "languages": {
       "cnil_translations": "Von der CNIL bereitgestellte Übersetzungen",
       "community_translations": "Von der Community bereitgestellte Übersetzungen",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
