--- a/src/lib/assets/i18n/dk.json
+++ b/src/lib/assets/i18n/dk.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Oversættelser af CNILs",
       "community_translations": "Community oversættelser",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
