--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Μεταφράσεις που παρείχε η CNIL",
       "community_translations": "Μεταφράσεις που παρείχε η κοινότητα",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
