--- a/src/lib/assets/i18n/es.json
+++ b/src/lib/assets/i18n/es.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Traducciones del CNIL",
       "community_translations": "Traducciones de la comunidad",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
