--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "CNIL’i  esitatud tõlge",
       "community_translations": "Kogukondade tehtud tõlked",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
