--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "CNIL:n tarjoamat käännökset",
       "community_translations": "Epäviralliset käännökset",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
