--- a/src/lib/assets/i18n/hr.json
+++ b/src/lib/assets/i18n/hr.json
@@ -165,6 +165,7 @@
     "languages": {
       "cnil_translations": "Prijevodi od strane CNIL-a",
       "community_translations": "Prijevodi od strane zajednice",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
