--- a/src/lib/assets/i18n/hu.json
+++ b/src/lib/assets/i18n/hu.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "A CNIL által biztosított fordítások",
       "community_translations": "Nem hivatalos fordítások",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
