--- a/src/lib/assets/i18n/it.json
+++ b/src/lib/assets/i18n/it.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Traduzioni fornite da CNIL",
       "community_translations": "Traduzioni fornite da soggetti diversi",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
