--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "CNIL nodrošinātie tulkojumi",
       "community_translations": "Kopienas nodrošinātie tulkojumi",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
