--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Vertalingen door de CNIL",
       "community_translations": "Vertalingen door de community",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
