--- a/src/lib/assets/i18n/pl.json
+++ b/src/lib/assets/i18n/pl.json
@@ -165,6 +165,7 @@
     "languages": {
       "cnil_translations": "Wersje przetłumaczone przez CNIL",
       "community_translations": "Wersja przetłumaczone przez społeczność",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
