--- a/src/lib/assets/i18n/pt.json
+++ b/src/lib/assets/i18n/pt.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Traduções fornecidas pela CNIL",
       "community_translations": "Traduções fornecidas pela comunidade",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
