--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Traduceri oferite de către CNIL",
       "community_translations": "Traduceri oferite de către Comunitate",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
