--- a/src/lib/assets/i18n/sv.json
+++ b/src/lib/assets/i18n/sv.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "Traductions fournies par la CNIL",
       "community_translations": "Traductions fournies par la communauté",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
