--- a/src/lib/assets/i18n/lt.json
+++ b/src/lib/assets/i18n/lt.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "CNIL vertimas",
       "community_translations": "Bendruomenės pasiūlytas vertimas",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
