--- a/src/lib/assets/i18n/no.json
+++ b/src/lib/assets/i18n/no.json
@@ -160,6 +160,7 @@
     "languages": {
       "cnil_translations": "TO BE TRANSLATED - CNIL provided translations",
       "community_translations": "TO BE TRANSLATED - Community provided translations",
+      "bg": "TO TRANSLATE - Bulgarian",
       "cz": "Česky",
       "de": "Deutsch",
       "dk": "Dansk",
