--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -114,7 +114,7 @@
     "homepage_link": "Моите ОВЗД",
     "knowledge_base_link": "База знания",
     "languages": {
-      "bg": "TO TRANSLATE - Bulgarian",
+      "bg": "български",
       "cnil_translations": "Предоставени от CNIL преводи",
       "community_translations": "Преводи предоставени от общността",
       "cz": "Чешки",
